[FIX] 언어 설정에 따라 letter-spacing 변경 처리

--- a/src/styles/components/page-frame/frame.scss
+++ b/src/styles/components/page-frame/frame.scss
@@ -4,6 +4,12 @@ body {
   height: 100%;
 }
 
+[lang="en"] {
+  * {
+    letter-spacing: 0px;
+  }
+}
+
 #pageContainer {
   width: 100%;
   height: 100%;
